# Semantic_Scavenger

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/semantic_scavenger/lib/semantic_scavenger/: robot_controller  vla_bridge
install/semantic_scavenger/share/semantic_scavenger/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_description/share/ur_description/cmake/: ur_descriptionConfig-version.cmake  ur_descriptionConfig.cmake
install/ur_description/share/ur_description/config/: initial_positions.yaml
install/ur_description/share/ur_description/environment/: ament_prefix_path.dsv  path.dsv
install/ur_description/share/ur_description/launch/: view_ur.launch.py  view_ur.launch.xml
install/ur_description/share/ur_description/rviz/: view_robot.rviz
install/ur_simulation_gazebo/share/ur_simulation_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/: scavenger_bringup.launch.py  scavenger_launch.py  scavenger_robot.urdf.xacro
src/semantic_scavenger/: package.xml  setup.cfg  setup.py
src/semantic_scavenger/semantic_scavenger/: robot_controller.py  vla_bridge.py
(+221 files in other folders)
