<?xml version="1.0"?>
<package format="3">
  <name>semantic_scavenger</name>
  <version>0.0.1</version>
  <description>VLA Bridge for Semantic Scavenger</description>
  <maintainer email="akbaris@ufl.edu">akbaris</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
